objects/ORFFieldsConfiguration__c.object
<CustomObject>
    <description>The object is used to configure field on ORF depending on Partner Program.</description>
    <fields>
        <fullName>APIName__c</fullName>
        <label>API Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORFFormType__c</fullName>
        <label>ORF Form Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Program</label>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>ORF Fields Configuration</relationshipLabel>
        <relationshipName>ORFFieldsConfiguration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ORF Field Configuration</label>
    <nameField>
        <label>ORF Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ORF Fields Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ForMandatoryField</fullName>
        <active>true</active>
        <description>Mandatory field will be true only when available is true.</description>
        <errorConditionFormula>AND(Available__c=false,Mandatory__c=true)</errorConditionFormula>
        <errorMessage>Field cannot be mandatory before making it Available</errorMessage>
    </validationRules>
</CustomObject>